tests/NormalTests/paczka1/small_fuzzy/99420532.err
Error in line 2: HLi00TY A985 99,6
Error in line 12: HLi00TY A825 68,3
